@@ -1,3 +1,9 @@
+2017-04-30  Per Bothner  <per@bothner.com>
+
+	* ClassMethods.java: Accept any CharSequence as a string.
+	* CompileBuildObject.java: Likewise.
+	* Invoke.java: Likewise.
+
 2017-04-01  Per Bothner  <per@bothner.com>
 
 	* CompileReflect.java (validate): Optimize 'class' static pseudo-field.
